[package]
name = "hi-zura-wiki"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http1", "tokio", "tracing"] }
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
tokio = { version = "1.38.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
